dark mode initialised, logic fixes

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -99,6 +99,11 @@ body {
   }
 }
 
+body.dark-mode {
+  background-color: var(--color-inky-blue);
+  color: var(--color-off-white);
+}
+
 #splashscreen {
   position: relative;
   height: 100vh;
@@ -533,10 +538,22 @@ body {
       width: 20vw;
       display: flex;
       align-items: center;
+
+      img {
+        border-radius: 50%;
+        height: 150px;
+        width: 150px;
+      }
     }
     .review-meta-info {
       flex: 1;
       margin: 0 1rem;
+      a {
+        h3 {
+          text-decoration: underline;
+          color: var(--color-forest-green);
+        }
+      }
       p {
         font-size: 0.9rem;
         line-height: 1.2;
@@ -676,6 +693,12 @@ body {
       margin-top: 0.5em;
     }
 
+    img.user-avatar-img {
+      height: 200px;
+      width: 200px;
+      border-radius: 50%;
+    }
+
     h3 {
       margin-bottom: 0.3rem;
       font-size: 1.8rem;
@@ -690,6 +713,7 @@ body {
       font-size: 0.9rem;
       color: var(--color-forest-green);
       text-decoration: underline;
+      cursor: pointer;
     }
 
     #edit-bio {
